version/0.20/_sources/api/solver/_autosummary/settings/flux_momentum.rst.txt
:orphan:

.. _flux_momentum:

flux_momentum
=============

.. autoclass:: ansys.fluent.core.solver.settings_241.flux_momentum.flux_momentum
    :show-inheritance:

.. rubric:: Methods

========================================   =======================================

Method                                                                     Summary

========================================   =======================================
:ref:`list_properties <list_properties>`       List properties of selected object.

========================================   =======================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

==================   =======================

Parent                               Summary

==================   =======================
:ref:`dpm <dpm_2>`       Help not available.

==================   =======================

