version/0.22/_sources/api/solver/_autosummary/settings/flux_momentum.rst.txt
:orphan:

.. _flux_momentum:

flux_momentum
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.flux_momentum.flux_momentum
    :show-inheritance:

.. rubric:: Methods

========================================   ==========================================

Method                                                                        Summary

========================================   ==========================================
:ref:`list_properties <list_properties>`          List properties of selected object.

:ref:`resize <resize>`                         Set number of objects for list-object.

========================================   ==========================================

.. rubric:: Named object type

:ref:`reference_frame_velocity_child <reference_frame_velocity_child>`


.. rubric:: Included in:

==============================   ==============================================

Parent                                                                  Summary

==============================   ==============================================
:ref:`wall_film <wall_film_1>`       Wall Film Settings for boundary-condition.

==============================   ==============================================

